spacing fix

--- a/new/stylesheet.sass
+++ b/new/stylesheet.sass
@@ -86,7 +86,8 @@ p
 	box-shadow: 0 5px 5px 0px rgba($dark-shadow, .25) 
 	div
 		padding: 20px
-		padding-left: 100px
+		padding-left: 70px
+		padding-right: 50px
 		transition: background-color .4s
 		background: linear-gradient(to right, $dark-shadow 50%, rgba(white, .2))
 		background-size: 250% 100%
